WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228303
Web Inspector: [Cocoa] "RemoteInspector XPC connection to relay failed." messages are confusing in StdErr
https://bugs.webkit.org/show_bug.cgi?id=228303
Summary
Web Inspector: [Cocoa] "RemoteInspector XPC connection to relay failed." mess...
Patrick Angle
Reported
2021-07-26 15:00:45 PDT
There are many circumstances in which we expect the conditions that cause this logging to be encountered, and we shouldn't be `WTFLogAlways`ing for it, as that then puts the message in StdErr, creating confusing output when investigating often unrelated issues.
Attachments
Patch v1.0
(2.02 KB, patch)
2021-07-26 15:04 PDT
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
Patch v1.1 - Use os_log to keep loging
(3.01 KB, patch)
2021-07-27 11:39 PDT
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
Patch v1.2 - Revert to v1.0 approach, prepare to land
(2.08 KB, patch)
2021-07-27 16:12 PDT
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-07-26 15:00:58 PDT
<
rdar://problem/81132233
>
Patrick Angle
Comment 2
2021-07-26 15:04:05 PDT
Created
attachment 434245
[details]
Patch v1.0
Patrick Angle
Comment 3
2021-07-27 11:37:44 PDT
<
rdar://80395793
>
Patrick Angle
Comment 4
2021-07-27 11:39:30 PDT
Created
attachment 434302
[details]
Patch v1.1 - Use os_log to keep loging
Patrick Angle
Comment 5
2021-07-27 16:07:02 PDT
There are remaining questions and confusion surrounding use of os_log, so for now falling back to Darin's r+ yesterday on a patch to just remove the offending logging. I'll open a new bug to reintroduce this logging.
Patrick Angle
Comment 6
2021-07-27 16:12:56 PDT
Created
attachment 434379
[details]
Patch v1.2 - Revert to v1.0 approach, prepare to land
EWS
Comment 7
2021-07-27 19:32:56 PDT
Committed
r280370
(
240017@main
): <
https://commits.webkit.org/240017@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434379
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug