Web Inspector: [Cocoa] "RemoteInspector XPC connection to relay failed." messages are confusing in StdErr https://bugs.webkit.org/show_bug.cgi?id=228303

Reviewed by Darin Adler.

Remove overly verbose and confusing `WTFLogAlways` messages added in r278413, which can confuse applications
listening to stderr of a process using JavaScriptCore.

* inspector/remote/cocoa/RemoteInspectorCocoa.mm:
(Inspector::RemoteInspector::xpcConnectionFailed):


Canonical link: https://commits.webkit.org/240017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280370 268f45cc-cd09-0410-ab3c-d52691b4dbfc